chore: suppress noisy linting warnings
- Pylance: Disable unused imports, variables, type issues
- Pylint: Suppress logging-fstring, protected-access, reimport
- Markdown: Disable MD022/024/031/032/040/058/060 formatting rules

Reduces noise from 1241+ warnings to ~0 critical issues.

--- a/.pylintrc
+++ b/.pylintrc
@@ -4,13 +4,21 @@ disable=
     no-member,
     unused-import,
     unused-variable,
+    unused-argument,
     too-many-locals,
     too-many-statements,
     too-many-branches,
     broad-except,
     invalid-name,
     missing-docstring,
-    line-too-long
+    line-too-long,
+    logging-fstring-interpolation,
+    protected-access,
+    redefined-outer-name,
+    global-statement,
+    reimported,
+    pointless-string-statement,
+    unspecified-encoding
 
 [FORMAT]
 max-line-length=140
