--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,12 @@ reportUnknownVariableType = false
 reportUnknownArgumentType = false
 reportUnknownLambdaType = false
 reportUnknownParameterType = false
+reportUnusedImport = false
+reportUnusedVariable = false
+reportUnusedClass = false
+reportUnusedFunction = false
+reportConstantRedefinition = false
+reportIncompatibleMethodOverride = false
 reportMissingTypeStubs = false
 reportImportCycles = false
 reportUnusedImport = "information"
