feat: massive swarm infrastructure upgrade
18 new modules: PQC, treasury, autopoiesis, audit, intelligence, swarm, governance, dashboard
10 new test suites: dispatcher, treasury, autopoiesis, merkle, resonance, polyatomic, context-sync, legion
13 BER reports documenting PAC execution
Fixes: syntax errors, linting, type annotations
Invariants: UNI-01/02, TREASURY-01/02, GROWTH-01/02, HIST-01, SYNC-01/02/03, LEGION-01/02
Test status: 61 new tests passing
Code quality: 0 linting errors

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,10 @@ TIMEFRAME="5m"
 # -- Risk Management --
 # Cooldown period in minutes after a trade signal to prevent over-trading.
 COOLDOWN_MINUTES="10"
+
+# -- ChainBridge Sovereign Node Configuration --
+# Genesis anchors for cryptographic sovereignty (PAC-FIX-CB-2026-01-27)
+# PRODUCTION: Set these to deployment-specific values
+# DEVELOPMENT: Leave as defaults for local testing
+GENESIS_ANCHOR="GENESIS-SOVEREIGN-2026-01-14"
+GENESIS_BLOCK_HASH="aa1bf8d47493e6bfc7435ce39b24a63e"
